# ra2csf

./: README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
ra2csf/: __init__.py  __main__.py  csf.py  read.py  write.py
tests/: run_tests_with_coverage.sh  test_api.py  test_cli.py  test_read.py
