[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ra2csf.__init__.__version__"}

[project]
name = "ra2csf"
dynamic = ["version"]
description = "Read, write, update .csf files of Command & Conquer: Red Alert 2 / Command & Conquer: Yuri's Revenge"
readme = "README.md"
authors = [
    {name = "jet-logic"}
]
license = {file = "LICENSE"} 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/jet-logic/ra2csf"

[project.scripts]
ghrapt = "ra2csf.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ra2csf*"]